- Bundle, Wishlist tags cache time reduced to 6 hours. Trading Cards, Achievement, Mac, Linux, Early Access still 24 hours. (done)
- Changed how the script saves data. Now Trading Cards, Achievement, Mac, Linux, Early Access data saved as 1 data instead of 5 data per games. May reduce lags because of too many data stored. Need reinstall the script. (done)

2.12
- Added Early Access Tag, default is off.
- Changed Linux, Mac default as off.
- Added minimalist tag as option.
- Changed wishlist tag background color.
- Changed steamapi link : added genres in filter params.
- Changed packageapi link : removed filters params because it doesn't filter the result.
- Changed tag classes for their usage (preparation for custom color tag).
- Added hover text in SG Game Tags setting.

2.11.10
- Now saves steam data eventhough the tags is not turned on.

2.11.9
- Restructured codes, makes it possible to merge with minimalist version.
- Change all url filter to use regex.

2.11.6
- Fixed script crashing if featured giveaway has no image.

2.11.5
- Fixed bug bundled tags not appearing when there is [NEW] or [FREE] in the name because of ext SG.

2.11.2
- Fixed bug tags appearing in group member list page.

2.11.1
- Added support to Endless scroll.

2.10.3
- Fixed bug not showing bundle, wishlist, and hidden tag if the game title is too long (over 40 characters) by substr the game title to first 30 characters.

2.10.2
- Changed target class button save changes to js__submit-form. Should fix bug with ext SG & setting appear in space cat pop up.

2.10.1
- Fixed linux & mac tags still showing after turned off when loading new game.

2.10
- Added linux and mac tags.
- Fix problem unable to get data from packages.

2.9
- Updated script because SG becomes https.

2.8
- Added "Wishlist" tag.
- Added support to http://www.steamgifts.com/account/steam/wishlist and http://www.steamgifts.com/account/steam/games.

2.7
- Added support to sales page.

2.6