@@ -8,11 +8,12 @@
   1. How to disable tags I don't need?
      > https://www.steamgifts.com/account/settings/giveaways
   2. How to report a problem with this script?
-     
+     > Tell me what browser you are using, and other script/addons that runs at Steamgifts. A screenshot will help.
   3. The game is bundled but Bundle tag is not showing.
      > There is some reason for this :
        - It's just been bundled less than 6 hours ago.
        - Bug. Report to me if you spot a game with bundle date over than 6 hours ago but the bundle tag isn't showing.
+  4. The game has trading cards, but Trading Cards tag is not showing.
 
 
 
